// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Menu.Item render with borderless props 1`] = `
<DocumentFragment>
  .cache-bua2ao-StyledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  border: 0;
}

.cache-bua2ao-StyledButton-StyledButton:hover,
.cache-bua2ao-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-bua2ao-StyledButton-StyledButton:hover,
.cache-bua2ao-StyledButton-StyledButton:focus {
  color: #390171;
}

.cache-bua2ao-StyledButton-StyledButton:hover svg,
.cache-bua2ao-StyledButton-StyledButton:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-bua2ao-StyledButton-StyledButton:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="epxin6a0 cache-bua2ao-StyledButton-StyledButton em6gco80"
    role="menuitem"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco83"
    >
      Borderless Props
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with default props 1`] = `
<DocumentFragment>
  .cache-1vknmyi-StyledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1vknmyi-StyledButton-StyledButton:hover,
.cache-1vknmyi-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1vknmyi-StyledButton-StyledButton:hover,
.cache-1vknmyi-StyledButton-StyledButton:focus {
  color: #390171;
}

.cache-1vknmyi-StyledButton-StyledButton:hover svg,
.cache-1vknmyi-StyledButton-StyledButton:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1vknmyi-StyledButton-StyledButton:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="epxin6a0 cache-1vknmyi-StyledButton-StyledButton em6gco80"
    role="menuitem"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco83"
    >
      Default Props
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with disabled props 1`] = `
<DocumentFragment>
  .cache-1gz49bc-StyledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  box-shadow: none;
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1gz49bc-StyledButton-StyledButton:hover,
.cache-1gz49bc-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1gz49bc-StyledButton-StyledButton svg {
  fill: #c4c9d6;
}

.cache-1gz49bc-StyledButton-StyledButton:hover,
.cache-1gz49bc-StyledButton-StyledButton:focus {
  color: #390171;
}

.cache-1gz49bc-StyledButton-StyledButton:hover svg,
.cache-1gz49bc-StyledButton-StyledButton:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1gz49bc-StyledButton-StyledButton:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-1gz49bc-StyledButton-StyledButton:hover,
.cache-1gz49bc-StyledButton-StyledButton:focus {
  color: #4a4f62;
  background-color: #ffffff;
}

.cache-1gz49bc-StyledButton-StyledButton:hover svg,
.cache-1gz49bc-StyledButton-StyledButton:focus svg {
  fill: #4a4f62;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="true"
    class="epxin6a0 cache-1gz49bc-StyledButton-StyledButton em6gco80"
    disabled=""
    role="menuitem"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco83"
    >
      Disabled Props
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with variant danger 1`] = `
<DocumentFragment>
  .cache-1o8w3al-StyledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  color: #a6102d;
}

.cache-1o8w3al-StyledButton-StyledButton:hover,
.cache-1o8w3al-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1o8w3al-StyledButton-StyledButton:hover,
.cache-1o8w3al-StyledButton-StyledButton:focus {
  color: #390171;
}

.cache-1o8w3al-StyledButton-StyledButton:hover svg,
.cache-1o8w3al-StyledButton-StyledButton:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1o8w3al-StyledButton-StyledButton:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-1o8w3al-StyledButton-StyledButton:hover,
.cache-1o8w3al-StyledButton-StyledButton:focus {
  color: #a6102d;
}

.cache-1o8w3al-StyledButton-StyledButton:hover svg,
.cache-1o8w3al-StyledButton-StyledButton:focus svg {
  fill: #a6102d;
}

.cache-1o8w3al-StyledButton-StyledButton svg {
  fill: #a6102d;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="epxin6a0 cache-1o8w3al-StyledButton-StyledButton em6gco80"
    role="menuitem"
    type="button"
  >
    <div
      class="cache-m245rk-StyledContent em6gco83"
    >
      Danger
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with variant nav 1`] = `
<DocumentFragment>
  .cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  gap: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
}

.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton>* {
  pointer-events: none;
}

.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:hover,
.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:hover .e4bq1r52,
.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:hover::after,
.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:focus::after {
  background-color: #390171;
}

.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:active {
  text-decoration-thickness: 2px;
}

.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:hover,
.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:focus {
  gap: 0;
}

.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:hover,
.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:hover,
.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:focus {
  color: #390171;
}

.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:hover svg,
.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:hover,
.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:focus {
  color: #390171;
}

.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:hover svg,
.cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton:focus svg {
  fill: #390171;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<a
    class="epxin6a0 em6gco80 em6gco82 cache-wel5n6-StyledLink-StyledLink-StyledButton-StyledButton e4bq1r50"
    href="/test"
  >
    <div
      class="cache-m245rk-StyledContent em6gco83"
    >
      Nav
    </div>
  </a>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom-end" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom-end"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom-start" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom-start"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "top" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "top-end" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top-end"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "top-start" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top-start"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu renders with Menu.Item 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1vknmyi-StyledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1vknmyi-StyledButton-StyledButton:hover,
.cache-1vknmyi-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1vknmyi-StyledButton-StyledButton:hover,
.cache-1vknmyi-StyledButton-StyledButton:focus {
  color: #390171;
}

.cache-1vknmyi-StyledButton-StyledButton:hover svg,
.cache-1vknmyi-StyledButton-StyledButton:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1vknmyi-StyledButton-StyledButton:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      id="menu"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
        role="menu"
      >
        <button
          aria-disabled="false"
          class="epxin6a0 cache-1vknmyi-StyledButton-StyledButton em6gco80"
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Menu.Item
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-1"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1gz49bc-StyledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #f6f6f8;
  border-color: #d4dae7;
  box-shadow: none;
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1gz49bc-StyledButton-StyledButton:hover,
.cache-1gz49bc-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1gz49bc-StyledButton-StyledButton svg {
  fill: #c4c9d6;
}

.cache-1gz49bc-StyledButton-StyledButton:hover,
.cache-1gz49bc-StyledButton-StyledButton:focus {
  color: #390171;
}

.cache-1gz49bc-StyledButton-StyledButton:hover svg,
.cache-1gz49bc-StyledButton-StyledButton:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1gz49bc-StyledButton-StyledButton:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-1gz49bc-StyledButton-StyledButton:hover,
.cache-1gz49bc-StyledButton-StyledButton:focus {
  color: #4a4f62;
  background-color: #ffffff;
}

.cache-1gz49bc-StyledButton-StyledButton:hover svg,
.cache-1gz49bc-StyledButton-StyledButton:focus svg {
  fill: #4a4f62;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      id="menu-1"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
        role="menu"
      >
        <button
          aria-disabled="true"
          class="epxin6a0 cache-1gz49bc-StyledButton-StyledButton em6gco80"
          disabled=""
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Menu.Item disabled
          </div>
        </button>
        <button
          aria-disabled="true"
          class="epxin6a0 cache-1gz49bc-StyledButton-StyledButton em6gco80"
          disabled=""
          href="/link"
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Menu.Item Link disabled
          </div>
        </button>
        <button
          aria-disabled="true"
          class="epxin6a0 cache-1gz49bc-StyledButton-StyledButton em6gco80"
          disabled=""
          href="https://link"
          role="menuitem"
          type="button"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Menu.Item Link disabled
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-1"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  right: inherit;
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  gap: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  background-color: transparent;
  color: #4a4f62;
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton>* {
  pointer-events: none;
}

.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:hover,
.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:hover .e4bq1r52,
.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:hover::after,
.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:focus::after {
  background-color: #390171;
}

.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:active {
  text-decoration-thickness: 2px;
}

.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:hover,
.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:focus {
  gap: 0;
}

.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:hover,
.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:hover,
.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:focus {
  color: #390171;
}

.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:hover svg,
.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-m245rk-StyledContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      id="menu-1"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-1u5ri25-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
        role="menu"
      >
        <a
          class="epxin6a0 em6gco80 em6gco82 cache-9l5eww-StyledLink-StyledLink-StyledButton-StyledButton e4bq1r50"
          href="/link"
        >
          <div
            class="cache-m245rk-StyledContent em6gco83"
          >
            Menu.Item as Link
          </div>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with disclosure not a function 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Menu is visible
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      hidden=""
      id="menu"
      role="dialog"
      style="display: none; position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Menu renders with visible=false 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Menu is visible
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      hidden=""
      id="menu"
      role="dialog"
      style="display: none; position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;
